--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ a {
     text-decoration: none;
     color: #000080;
 }
+a:hover {
+    border: 1px solid #000080;
+}
 .header {
     width: 100%;
     height: 10%;
@@ -28,10 +31,10 @@ a {
     font-size: 14px;
     color: #ffffff;
     text-align: center;
-    padding-top: 0.37%;
+    padding-top: 0.548372281337%;
 }
 .content {
-    height: 85%;
+    min-height: 85%;
     width: 70%;
     background: #2d2d2d2d;
     margin-left: auto;
@@ -41,11 +44,8 @@ a {
     margin-left: auto;
     width: 95%;
     margin-right: auto;
-    font-family: Segoe Script;
+    font-family: 'Courier New', Courier, monospace;
     color: #000080;
     text-align: justify;
     padding-top: 2.5%;
-}
-.button {
-    border-radius:  5px;
 }
