--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a:hover {
     margin-left: auto;
     width: 95%;
     margin-right: auto;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Courier New', Courier, monospace, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: #000080;
     text-align: justify;
     padding-top: 2.5%;
